# AlphaC4

./: .gitignore  ActorCritic.py  Agent.py  Battle.py  C4.cpp  C4.h  C4.py  C4_Config.json  C4_Helpers.py  CMakeLists.txt  Evaluate.py  MCTS.py  NeuralNetwork.cpp  NeuralNetwork.h  Play.py  Playoff.py  README.md  SaveModel.py  SearchTree.py  Test_C4.py  Test_MCTS.py  Test_MCTS_C.py  Test_Training.py  Tournament.py  Train.py  Trainer.py  Training.py  Window.py  config.json  debugTrainers.py  debugTraining.py  gym_test.py  helpers.py  main.py  mcts.cpp  mcts.h  parameters.json  rapid_test.py  setup.py  test.py  (+2 more)
google_tests/: C4_Tests.cpp  date.cpp  date.h
python/: Evaluate.py  Exceptions.py  MCTS.py  Test_MCTS.py
python-tests/: test-training.py
src/: C4_Test.cpp  MCTS_Test.cpp  NN_Test.cpp
src/utils/: C4.cpp  C4.h  NeuralNetwork.cpp  NeuralNetwork.h  bindings.cpp  mcts.cpp  mcts.h  test_cppflow.cpp  thread_pool.h
tests/: debugTrainers.py  log.txt  profileMCTS.py  rapid_test.py  test-convergence.py  test-mcts.py  test_c4.py  test_convergence.py  test_mcts.py  test_searchTree.py
utils/: C4.py  MCTS.py
utils/model/: saved_model.pb
utils/model/variables/: variables.index
